Version = release 1.06 new URL(String) deprecated с Java 20. changed to URI.create(link).toURL()